--- a/LAB2.ipynb
+++ b/LAB2.ipynb
@@ -1103,6 +1103,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Seleccion de series a utilizar \n",
+    "## Consumo de gasolina super "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inicio: 0\n",
+      "Fin: 293\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'RangeIndex' object has no attribute 'freq'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[41], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInicio:\u001b[39m\u001b[38;5;124m\"\u001b[39m, consumo_filtered[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGasolina superior\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mfirst_valid_index())\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFin:\u001b[39m\u001b[38;5;124m\"\u001b[39m, consumo_filtered[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGasolina superior\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mlast_valid_index())\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFrecuencia:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mconsumo_filtered\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mGasolina superior\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfreq\u001b[49m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'RangeIndex' object has no attribute 'freq'"
+     ]
+    }
+   ],
+   "source": [
+    "#identificar el inicio, fin y frecuenca de la serie consumo de gasolina super \n",
+    "print(\"Inicio:\", consumo_filtered['Gasolina superior'].first_valid_index())\n",
+    "print(\"Fin:\", consumo_filtered['Gasolina superior'].last_valid_index())\n",
+    "frecuencia = pd.infer_freq(consumo_filtered['Gasolina superior'].index)\n",
+    "print(\"Frecuencia:\", frecuencia)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
